优化界面显示

--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/head.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/head.html
@@ -56,7 +56,7 @@
                     <li><a href="#">退出</a></li>
                 </ul>
             </li>
-            <li class="dropdown"><a href="#" class="dropdown-toggle mystyle-color" data-toggle="dropdown">换肤<span class="caret"></span></a>
+           <!-- <li class="dropdown"><a href="#" class="dropdown-toggle mystyle-color" data-toggle="dropdown">换肤<span class="caret"></span></a>
                 <ul class="dropdown-menu changecolor">
                     <li id="blue"><a href="#">蓝色</a></li>
                     <li class="divider"></li>
@@ -64,7 +64,7 @@
                     <li class="divider"></li>
                     <li id="orange"><a href="#">橙色</a></li>
                 </ul>
-            </li>
+            </li>-->
         </ul>
     </div>
 </nav>
