--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
@@ -34,7 +34,7 @@
                 </li>
                 <li>
                     <div class="showtitle" style="width:100px;"><img src="/admin_/img/leftimg.png" />评论管理</div>
-                    <a href="identify.html"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">评论管理</span></a>
+                    <a href="/admin/index/comments"><span class="sublist-icon glyphicon glyphicon-credit-card"></span><span class="sub-title">评论管理</span></a>
                 </li>
             </ul>
         </div>
