--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/motto.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/motto.html
@@ -23,7 +23,7 @@
                                     <table class="table table-striped table-bordered">
                                         <thead>
                                         <tr>
-                                            <th>名言名称</th>
+                                            <th>名言作者</th>
                                             <th>名言内容</th>
                                             <th>名言描述</th>
                                             <th>操作</th>
