--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
@@ -19,6 +19,10 @@
     <script type="text/javascript" src="/js/search.js"></script>
     <script type="text/javascript" src="/js/jquery.flexText.js"></script>
     <script type="text/javascript" src="/js/sinaFaceAndEffec.js"></script>
+
+    <link href="/xcConfirm/css/xcConfirm.css" rel="stylesheet">
+    <script src="/xcConfirm/js/xcConfirm.js"></script>
+
 </head>
 
 <body class="home blog logged-in admin-bar no-customize-support hfeed at-sticky-sidebar right-sidebar" style="margin-top: 0">
@@ -37,6 +41,8 @@
 
                     <article id="post-6" class="post-8 post type-post status-publish format-standard hentry category-uncategorized">
 
+                        <input id="cidd" type="hidden" th:value="${content.data.mid}">
+
                         <header class="entry-header" style="margin-top: -20px">
                             <h2 class="entry-title"><a rel="bookmark"><label th:text="${content.data.name}"></label></a></h2>
                             <div class="entry-meta">
@@ -54,46 +60,72 @@
 
                 <div class="commentAll" style="border-top: 1px solid #ccc;width: 100%">
                     <!--回复区域 begin-->
-                    <label>已有3条评论</label>
-                    <div class="comment-show" style="border-bottom: 1px solid #ccc;">
-                        <div class="comment-show-con clearfix">
-                            <div class="comment-show-con-img pull-left"><img src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
-                            <div class="comment-show-con-list pull-left clearfix">
-                                <div class="pl-text clearfix">
-                                    <a href="#" class="comment-size-name">张三 : </a>
-                                    <span class="my-pl-con">&nbsp;来啊 造作啊!</span>
-                                </div>
-                                <div class="date-dz">
-                                    <span class="date-dz-left pull-left comment-time">2017-5-2 11:11:39</span>
-                                    <div class="date-dz-right pull-right comment-pl-block">
-                                        <a href="javascript:;" class="removeBlock">删除</a>
-                                        <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left">回复</a>
-                                        <span class="pull-left date-dz-line">|</span>
-                                        <a href="javascript:;" class="date-dz-z pull-left"><i class="date-dz-z-click-red"></i>赞 (<i class="z-num">666</i>)</a>
+                    <div th:if="null ne ${comments}">
+                        <div class="comment-show" style="margin:0;border-bottom: 1px solid #ccc">
+                            <div class="comment-show-con clearfix"  th:each="comment : ${comments.data}">
+                                <div class="comment-show-con-img pull-left"><img style="width: 40px;border-radius: 50%" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
+                                <div class="comment-show-con-list pull-left clearfix">
+                                    <div class="pl-text clearfix">
+                                        <a href="#" class="comment-size-name" th:value="${comment.coid}" th:text="${comment.author} + '：'">  </a>
+                                        <span class="my-pl-con">&nbsp;<span th:utext="${comment.content}"></span></span>
+                                    </div>
+                                    <div class="date-dz">
+                                        <span class="date-dz-left pull-left comment-time"><span th:text="${comment.created}"></span></span>
+                                        <div class="date-dz-right pull-right comment-pl-block">
+                                            <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left">回复</a>
+                                            <span class="pull-left date-dz-line">|</span>
+                                            <a href="javascript:;" class="date-dz-z pull-left"><i class="date-dz-z-click-red"></i>赞 (<i class="z-num">666</i>)</a>
+                                        </div>
+                                    </div>
+
+                                    <div th:if="null ne ${comment.childrenComments}" class="hf-list-con">
+                                        <div class="comment-show-con clearfix"  th:each="comment1 : ${comment.childrenComments}">
+                                            <div class="comment-show-con-img pull-left"><img style="border-radius: 50%;width: 40px;" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
+                                            <div class="comment-show-con-list pull-left clearfix">
+                                                <div class="pl-text clearfix">
+                                                    <a href="#" class="comment-size-name" th:value="${comment1.coid}" th:text="${comment1.author}"></a> @ <span class="my-pl-con" th:text="${comment1.parentAuthorName}"></span>:
+                                                    <span class="my-pl-con">&nbsp;<span th:utext="${comment1.content}"></span></span>
+                                                </div>
+                                                <div class="date-dz">
+                                                    <span class="date-dz-left pull-left comment-time"><span th:text="${comment.created}"></span></span>
+                                                    <div class="date-dz-right pull-right comment-pl-block">
+                                                        <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left">回复</a>
+                                                        <span class="pull-left date-dz-line">|</span>
+                                                        <a href="javascript:;" class="date-dz-z pull-left"><i class="date-dz-z-click-red"></i>赞 (<i class="z-num">666</i>)</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                     </div>
                                 </div>
-                                <div class="hf-list-con"></div>
                             </div>
                         </div>
                     </div>
+
+                    <label id="noComment" th:if="null eq ${comments}" style="width: 100%;padding-bottom: 10px;border-bottom: 1px solid #ccc">暂无评论哦，快来发表评论吧！</label>
+
                     <!--回复区域 end-->
 
                     <!--评论区域 begin-->
 
                     <label style="padding-top: 20px">发表新评论</label>
                     <div class="reviewArea">
-                        <input class="form-control" placeholder="请输入您的昵称*"/>
+                        <input id="nickName" class="form-control" placeholder="请输入您的昵称*"/>
                     </div>
                     <div class="reviewArea" style="padding-top: 10px">
-                        <input class="form-control" placeholder="请输入您的网址(https/http)"/>
+                        <input id="url" class="form-control" placeholder="请输入您的网址(https/http)"/>
                     </div>
                     <div  class="reviewArea" style="padding-top: 10px;padding-bottom: 10px">
-                        <input class="form-control"  placeholder="请输入您的邮箱"/>
+                        <input id="email" class="form-control"  placeholder="请输入您的邮箱"/>
                     </div>
-                    <div class="reviewArea clearfix">
-                        <textarea class="content comment-input" placeholder="Please enter a comment&hellip;" onkeyup="keyUP(this)"></textarea>
-                        <span style="padding-left: 82%;font-size: 40px;margin-top: -16px;color:#5BC0DE;cursor: pointer;" class="face-icon"  >☺</span>
-                        <a href="javascript:;" style="margin-top: 12px;" class="plBtn">评论</a>
+                    <div class="reviewArea clearfix" style="padding-bottom: 100px">
+                        <textarea  class="content comment-input" placeholder="Please enter a comment&hellip;" onkeyup="keyUP(this)"></textarea>
+
+                        <div id="ccc" style="text-align: right">
+                            <span style="font-size: 40px;margin-top: -16px;color:#5BC0DE;cursor: pointer;" class="face-icon"  >☺</span>
+                            <a href="javascript:;" style="margin-top: 12px;margin-left: 20px" class="plBtn">评论</a>
+                        </div>
                     </div>
 
                     <!--评论区域 end-->
@@ -109,11 +141,12 @@
 
 <!--textarea高度自适应-->
 <script type="text/javascript">
-    $(function () {
+    $(function (){
         $('.content').flexText();
         // 绑定表情
         $('.face-icon').SinaEmotion($('.comment-input'));
     });
+
 </script>
 <!--textarea限制字数-->
 <script type="text/javascript">
@@ -124,31 +157,70 @@
         }
     }
 </script>
+
+<!--向后台提交评论信息-->
+<script type="text/javascript">
+    function addComment(content,topLevelId,parent) {
+        console.log("----content----"+content);
+
+        var jsonData = GetJsonData(content,topLevelId,parent);
+
+        $.ajax({
+            type:'post',
+            url:'/index/comment',
+            data:JSON.stringify(jsonData),
+            cache:false,
+            dataType:'json',
+            contentType:"application/json",
+            success:function(data){
+                var txt=  "骚年，评论成功";
+                window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.success);
+                setTimeout(function () {
+                    window.location.href = '/index/about/';
+                }, 1000);
+            },
+            error:function(data){
+                var txt=  "啊哦，评论失败了，等会再试吧";
+                window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.error);
+                return false;
+            }
+        })
+
+        return true;
+    }
+
+    function GetJsonData(content,topLevelId,parent) {
+        var pojoInputDTO = {
+            data:{
+                "cid":$("#cidd").val(),
+                "topLevelId": topLevelId,
+                "parent": parent,
+                "author": $("#nickName").val(),
+                "url": $("#url").val(),
+                "mail":$("#email").val(),
+                "content": content,
+            }
+        };
+        return pojoInputDTO;
+    }
+</script>
+
+
 <!--点击评论创建评论条-->
 <script type="text/javascript">
     $('.commentAll').on('click','.plBtn',function(){
-        var myDate = new Date();
-        //获取当前年
-        var year=myDate.getFullYear();
-        //获取当前月
-        var month=myDate.getMonth()+1;
-        //获取当前日
-        var date=myDate.getDate();
-        var h=myDate.getHours();       //获取当前小时数(0-23)
-        var m=myDate.getMinutes();     //获取当前分钟数(0-59)
-        if(m<10) m = '0' + m;
-        var s=myDate.getSeconds();
-        if(s<10) s = '0' + s;
-        var now=year+'-'+month+"-"+date+" "+h+':'+m+":"+s;
-        //获取输入内容
-        var oSize = $(this).siblings('.flex-text-wrap').find('.comment-input').val();
-        console.log(oSize);
-        //动态创建评论模块
-        oHtml = '<div class="comment-show-con clearfix"><div class="comment-show-con-img pull-left"><img src="/image/header-img-comment_03.png" alt=""></div> <div class="comment-show-con-list pull-left clearfix"><div class="pl-text clearfix"> <a href="#" class="comment-size-name">David Beckham : </a> <span class="my-pl-con">&nbsp;'+ oSize +'</span> </div> <div class="date-dz"> <span class="date-dz-left pull-left comment-time">'+now+'</span> <div class="date-dz-right pull-right comment-pl-block"><a href="javascript:;" class="removeBlock">删除</a> <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left">回复</a> <span class="pull-left date-dz-line">|</span> <a href="javascript:;" class="date-dz-z pull-left"><i class="date-dz-z-click-red"></i>赞 (<i class="z-num">666</i>)</a> </div> </div><div class="hf-list-con"></div></div> </div>';
-        if(oSize.replace(/(^\s*)|(\s*$)/g, "") != ''){
-            $(this).parents('.reviewArea ').siblings('.comment-show').prepend(oHtml);
-            $(this).siblings('.flex-text-wrap').find('.comment-input').prop('value','').siblings('pre').find('span').text('');
+
+        if("" == $("#nickName").val()){
+            var txt=  "请先填写昵称哦";
+            window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.warning);
+            return;
         }
+
+        //获取输入内容
+        var oSize = $(this).parents('#ccc').siblings('.flex-text-wrap').find('.comment-input').val();
+
+        //向后台提交评论信息
+        addComment(AnalyticEmotion(oSize),-1,0);
     });
 </script>
 <!--点击回复动态创建回复块-->
@@ -157,7 +229,7 @@
         //获取回复人的名字
         var fhName = $(this).parents('.date-dz-right').parents('.date-dz').siblings('.pl-text').find('.comment-size-name').html();
         //回复@
-        var fhN = '回复@'+fhName;
+        var fhN = '@'+fhName+"   ";
         //var oInput = $(this).parents('.date-dz-right').parents('.date-dz').siblings('.hf-con');
         var fhHtml = '<div class="hf-con pull-left"> <textarea class="content comment-input hf-input" placeholder="" onkeyup="keyUP(this)"></textarea> <a href="javascript:;" class="hf-pl">评论</a></div>';
         //显示回复
@@ -168,84 +240,41 @@
             $(this).parents('.date-dz-right').siblings('.hf-con').find('.pre').css('padding','6px 15px');
             //console.log($(this).parents('.date-dz-right').siblings('.hf-con').find('.pre'))
             //input框自动聚焦
-            $(this).parents('.date-dz-right').siblings('.hf-con').find('.hf-input').val('').focus().val(fhN);
+            $(this).parents('.date-dz-right').siblings('.hf-con').find('.hf-input').val('').focus().attr("placeholder",fhN);
         }else {
             $(this).addClass('hf-con-block');
             $(this).parents('.date-dz-right').siblings('.hf-con').remove();
         }
     });
 </script>
+
 <!--评论回复块创建-->
 <script type="text/javascript">
     $('.comment-show').on('click','.hf-pl',function(){
-        var oThis = $(this);
-        var myDate = new Date();
-        //获取当前年
-        var year=myDate.getFullYear();
-        //获取当前月
-        var month=myDate.getMonth()+1;
-        //获取当前日
-        var date=myDate.getDate();
-        var h=myDate.getHours();       //获取当前小时数(0-23)
-        var m=myDate.getMinutes();     //获取当前分钟数(0-59)
-        if(m<10) m = '0' + m;
-        var s=myDate.getSeconds();
-        if(s<10) s = '0' + s;
-        var now=year+'-'+month+"-"+date+" "+h+':'+m+":"+s;
+
+        if("" == $("#nickName").val()){
+            var txt=  "请先填写昵称哦";
+            window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.warning);
+            return;
+        }
+
         //获取输入内容
         var oHfVal = $(this).siblings('.flex-text-wrap').find('.hf-input').val();
         console.log(oHfVal)
-        var oHfName = $(this).parents('.hf-con').parents('.date-dz').siblings('.pl-text').find('.comment-size-name').html();
-        var oAllVal = '回复@'+oHfName;
-        if(oHfVal.replace(/^ +| +$/g,'') == '' || oHfVal == oAllVal){
 
-        }else {
-            $.getJSON("/json/pl.json",function(data){
-                var oAt = '';
-                var oHf = '';
-                $.each(data,function(n,v){
-                    delete v.hfContent;
-                    delete v.atName;
-                    var arr;
-                    var ohfNameArr;
-                    if(oHfVal.indexOf("@") == -1){
-                        data['atName'] = '';
-                        data['hfContent'] = oHfVal;
-                    }else {
-                        arr = oHfVal.split(':');
-                        ohfNameArr = arr[0].split('@');
-                        data['hfContent'] = arr[1];
-                        data['atName'] = ohfNameArr[1];
-                    }
+        //获取父评论的id
+        var parentId = $(this).parents('.hf-con').parents('.date-dz').siblings('.pl-text').find('.comment-size-name').attr('value');
+        console.log("获取父评论的id"+parentId);
 
-                    if(data.atName == ''){
-                        oAt = data.hfContent;
-                    }else {
-                        oAt = '回复<a href="#" class="atName">@'+data.atName+'</a> : '+data.hfContent;
-                    }
-                    oHf = data.hfName;
-                });
+        //获取一级评论的id
+        var topLevelId = $(this).parents('.comment-show-con-list').find('.comment-size-name').attr('value');
+        console.log("获取一级评论的id"+topLevelId);
 
-                var oHtml = '<div class="all-pl-con"><div class="pl-text hfpl-text clearfix"><a href="#" class="comment-size-name">我的名字 : </a><span class="my-pl-con">'+oAt+'</span></div><div class="date-dz"> <span class="date-dz-left pull-left comment-time">'+now+'</span> <div class="date-dz-right pull-right comment-pl-block"> <a href="javascript:;" class="removeBlock">删除</a> <a href="javascript:;" class="date-dz-pl pl-hf hf-con-block pull-left" style="padding-left: 10px">回复</a> <span class="pull-left date-dz-line">|</span> <a href="javascript:;" class="date-dz-z pull-left"><i class="date-dz-z-click-red"></i>赞 (<i class="z-num">666</i>)</a> </div> </div></div>';
-                oThis.parents('.hf-con').parents('.comment-show-con-list').find('.hf-list-con').css('display','block').prepend(oHtml) && oThis.parents('.hf-con').siblings('.date-dz-right').find('.pl-hf').addClass('hf-con-block') && oThis.parents('.hf-con').remove();
-            });
-        }
+        //向后台提交评论信息
+        addComment(AnalyticEmotion(oHfVal),topLevelId,parentId);
     });
 </script>
-<!--删除评论块-->
-<script type="text/javascript">
-    $('.commentAll').on('click','.removeBlock',function(){
-        var oT = $(this).parents('.date-dz-right').parents('.date-dz').parents('.all-pl-con');
-        if(oT.siblings('.all-pl-con').length >= 1){
-            oT.remove();
-        }else {
-            $(this).parents('.date-dz-right').parents('.date-dz').parents('.all-pl-con').parents('.hf-list-con').css('display','none')
-            oT.remove();
-        }
-        $(this).parents('.date-dz-right').parents('.date-dz').parents('.comment-show-con-list').parents('.comment-show-con').remove();
 
-    })
-</script>
 <!--点赞-->
 <script type="text/javascript">
     $('.comment-show').on('click','.date-dz-z',function(){
@@ -263,7 +292,6 @@
         }
     })
 </script>
-
 
 </body>
 </html>
