--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
@@ -54,8 +54,7 @@
                             <label th:if="${pagebar} eq ${contents.pageNum}" style="margin-left: 3px;">
                                 <ul class="pagination" >
                                     <li class="active">
-                                        <a th:href="@{'/index/page/'+${pagebar}}">
-                                            <label th:text="${pagebar}"/>
+                                        <a th:href="@{'/index/page/'+${pagebar}}" th:text="${pagebar}">
                                         </a>
                                     </li>
                                 </ul>
@@ -64,8 +63,7 @@
                             <label th:if="${pagebar} ne ${contents.pageNum}" style="margin-left: 3px;">
                                 <ul class="pagination" >
                                     <li >
-                                        <a th:href="@{'/index/page/'+${pagebar}}">
-                                            <label th:text="${pagebar}"/>
+                                        <a th:href="@{'/index/page/'+${pagebar}}" th:text="${pagebar}">
                                         </a>
                                     </li>
                                 </ul>
