--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/index.html
@@ -2,18 +2,10 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>听雨博客，诚意推荐</title>
-    <link rel='stylesheet'  href='/placid/css/index.css' type='text/css'/>
-    <link rel='stylesheet'  href='//fonts.googleapis.com/css?family=Lora:400,400i,700,700i' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/framework/Font-Awesome/css/font-awesome.min.css' type='text/css' />
-    <link rel='stylesheet'  href='/placid/framework/bootstrap/css/bootstrap.css' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/css/style.css' type='text/css'/>
-    <link rel='stylesheet'  href='/css/code.css' type='text/css'/>
 
 
-    <script src="/admin_/script/jquery-3.3.1.js" type="text/javascript"></script>
-    <script type='text/javascript' src='/placid/framework/bootstrap/js/bootstrap.js'></script>
-    <script type="text/javascript" src="/js/search.js"></script>
 </head>
 
 <body class="home blog logged-in admin-bar no-customize-support hfeed at-sticky-sidebar right-sidebar" style="margin-top: 0">
@@ -29,18 +21,18 @@
             <div id="primary" class="content-area">
                 <main id="main" class="site-main" role="main">
 
-                    <article th:each="content : ${contents.data}" id="post-6" class="post-8 post type-post status-publish format-standard hentry category-uncategorized">
-                        <div style="float: left;text-align: center; ">
-                            <img style="max-height: 200px;width: auto;" src="https://moguos.oss-cn-shenzhen.aliyuncs.com/lolimeow/assets/images/rand/rand%20(10).jpg"/>
+                    <article style=" display: flex;height: auto;" th:each="content : ${contents.data}" id="post-6" class="post-8 post type-post status-publish format-standard hentry category-uncategorized">
+                        <div class="entry-img" style="float: left;text-align: center; ">
+                            <img style="max-height: 200px;min-height:160px ;width: auto;" src="https://moguos.oss-cn-shenzhen.aliyuncs.com/lolimeow/assets/images/rand/rand%20(10).jpg"/>
                         </div>
 
-                        <header class="entry-header" style="float: right;margin-top: -20px">
+                        <header class="entry-header" style="float: right;margin-top: -20px; margin-left: 20px;">
                             <h2 class="entry-title"><a th:href="@{'/index/post/'+${content.cid}}" rel="bookmark"><label th:text="${content.title}"></label></a></h2>
                             <div class="entry-meta">
                                 <span class="poston">Posted on <a rel="bookmark"><time class="entry-date published updated"><label th:text="${content.created}"></label></time></a></span><span class="post-by"> By <span class="author vcard"><a class="url fn n"><span th:text="${userShow.nickName}"></span></a></span></span>
                             </div><!-- .entry-meta -->
 
-                            <div class="entry-content" style="max-width: 400px">
+                            <div class="entry-content" style="max-width: 400px;min-width: 320px;">
                                 <p>
                                     <span th:text="${content.content}"></span>
                                 </p>
@@ -54,7 +46,8 @@
                             <label th:if="${pagebar} eq ${contents.pageNum}" style="margin-left: 3px;">
                                 <ul class="pagination" >
                                     <li class="active">
-                                        <a th:href="@{'/index/page/'+${pagebar}}" th:text="${pagebar}">
+                                        <a th:href="@{'/index/page/'+${pagebar}}">
+                                            <label th:text="${pagebar}"/>
                                         </a>
                                     </li>
                                 </ul>
@@ -63,7 +56,8 @@
                             <label th:if="${pagebar} ne ${contents.pageNum}" style="margin-left: 3px;">
                                 <ul class="pagination" >
                                     <li >
-                                        <a th:href="@{'/index/page/'+${pagebar}}" th:text="${pagebar}">
+                                        <a th:href="@{'/index/page/'+${pagebar}}">
+                                            <label th:text="${pagebar}"/>
                                         </a>
                                     </li>
                                 </ul>
@@ -71,7 +65,7 @@
                         </label>
                         <ul class="pagination" style="margin-left: -20px">
                             <li >
-                                <a href="#">
+                                <a >
                                     <label>共</label><label th:text="${contents.totalPageNum}"/><label>页</label>
                                 </a>
                             </li>
