--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/about.html
@@ -2,26 +2,11 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>听雨博客，诚意推荐</title>
-    <link rel='stylesheet'  href='/placid/css/index.css' type='text/css'/>
-    <link rel='stylesheet'  href='//fonts.googleapis.com/css?family=Lora:400,400i,700,700i' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/framework/Font-Awesome/css/font-awesome.min.css' type='text/css' />
-    <link rel='stylesheet'  href='/placid/framework/bootstrap/css/bootstrap.css' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/css/style.css' type='text/css'/>
-    <link rel='stylesheet'  href='/css/code.css' type='text/css'/>
-    <link href="/css/sinaFaceAndEffec.css" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/comment.css"/>
-
-    <script src="/admin_/script/jquery-1.11.1.min.js" type="text/javascript"></script>
-    <script type='text/javascript' src='/placid/framework/bootstrap/js/bootstrap.js'></script>
-    <script type="text/javascript" src="/js/search.js"></script>
-    <script type="text/javascript" src="/js/jquery.flexText.js"></script>
-    <script type="text/javascript" src="/js/sinaFaceAndEffec.js"></script>
-
-    <link href="/xcConfirm/css/xcConfirm.css" rel="stylesheet">
-    <script src="/xcConfirm/js/xcConfirm.js"></script>
 
 </head>
 
@@ -58,7 +43,7 @@
 
                 </main>
 
-                <div class="commentAll" style="border-top: 1px solid #ccc;width: 100%">
+                <div class="commentAll" style="border-top: 1px solid #ccc;width: 98%">
                     <!--回复区域 begin-->
                     <div th:if="null ne ${comments}">
                         <div class="comment-show" style="margin:0;border-bottom: 1px solid #ccc">
