--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/archive.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/archive.html
@@ -2,18 +2,8 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>听雨博客，诚意推荐</title>
-    <link rel='stylesheet'  href='/placid/css/index.css' type='text/css'/>
-    <link rel='stylesheet'  href='//fonts.googleapis.com/css?family=Lora:400,400i,700,700i' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/framework/Font-Awesome/css/font-awesome.min.css' type='text/css' />
-    <link rel='stylesheet'  href='/placid/framework/bootstrap/css/bootstrap.css' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/css/style.css' type='text/css'/>
-
-    <link rel='stylesheet'  href='/css/code.css' type='text/css'/>
-
-    <script src="/admin_/script/jquery-3.3.1.js" type="text/javascript"></script>
-    <script type='text/javascript' src='/placid/framework/bootstrap/js/bootstrap.js'></script>
-    <script type="text/javascript" src="/js/search.js"></script>
 </head>
 
 <body class="home blog logged-in admin-bar no-customize-support hfeed at-sticky-sidebar right-sidebar" style="margin-top: 0">
