--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/common/header.html
@@ -2,9 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+
 </head>
 <body>
     <header th:fragment="header" id="masthead" class="site-header" role="banner" style="color: white;background-image: url('https://listeningrain.cn/templates/themes/theme_greyshade-master/static/images/left-bg2.jpg')">
+
+        <!--引入公共的js和css文件-->
+        <link rel='stylesheet'  href='/placid/css/index.css' type='text/css'/>
+        <link rel='stylesheet'  href='//fonts.googleapis.com/css?family=Lora:400,400i,700,700i' type='text/css'/>
+        <link rel='stylesheet'  href='/placid/framework/Font-Awesome/css/font-awesome.min.css' type='text/css' />
+        <link rel='stylesheet'  href='/placid/framework/bootstrap/css/bootstrap.css' type='text/css'/>
+        <link rel='stylesheet'  href='/placid/css/style.css' type='text/css'/>
+        <link rel='stylesheet'  href='/css/code.css' type='text/css'/>
+        <script src="/admin_/script/jquery-3.3.1.js" type="text/javascript"></script>
+        <script type='text/javascript' src='/placid/framework/bootstrap/js/bootstrap.js'></script>
+        <script type="text/javascript" src="/js/search.js"></script>
+        <script type="text/javascript" src="/js/jquery.flexText.js"></script>
+        <script type="text/javascript" src="/js/sinaFaceAndEffec.js"></script>
+
+        <link href="/xcConfirm/css/xcConfirm.css" rel="stylesheet">
+        <script src="/xcConfirm/js/xcConfirm.js"></script>
 
         <div class="mid-header">
             <div class="container">
