--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
@@ -2,26 +2,11 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>听雨博客，诚意推荐</title>
-    <link rel='stylesheet'  href='/placid/css/index.css' type='text/css'/>
-    <link rel='stylesheet'  href='//fonts.googleapis.com/css?family=Lora:400,400i,700,700i' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/framework/Font-Awesome/css/font-awesome.min.css' type='text/css' />
-    <link rel='stylesheet'  href='/placid/framework/bootstrap/css/bootstrap.css' type='text/css'/>
-    <link rel='stylesheet'  href='/placid/css/style.css' type='text/css'/>
-    <link rel='stylesheet'  href='/css/code.css' type='text/css'/>
+
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="/css/comment.css"/>
-    <script src="/admin_/script/jquery-3.3.1.js" type="text/javascript"></script>
-    <script type='text/javascript' src='/placid/framework/bootstrap/js/bootstrap.js'></script>
-    <script type="text/javascript" src="/js/search.js"></script>
-    <script type="text/javascript" src="/js/jquery.flexText.js"></script>
-
-
-    <link href="/css/sinaFaceAndEffec.css" rel="stylesheet">
-    <script type="text/javascript" src="/js/sinaFaceAndEffec.js"></script>
-
-    <link href="/xcConfirm/css/xcConfirm.css" rel="stylesheet">
-    <script src="/xcConfirm/js/xcConfirm.js"></script>
 
 </head>
 
@@ -58,14 +43,15 @@
                         </header>
                     </article>
 
+
                 </main>
-                <div class="commentAll" style="border-top: 1px solid #ccc;width: 100%">
+                <div class="commentAll" style="border-top: 1px solid #ccc;width: 98%;">
                     <!--回复区域 begin-->
                     <div th:if="null ne ${comments}">
                         <label>已有<span th:text="${content.data.commentsNum}"></span>条评论</label>
                         <div class="comment-show" style="margin:0;border-bottom: 1px solid #ccc">
                             <div class="comment-show-con clearfix"  th:each="comment : ${comments.data}">
-                                <div class="comment-show-con-img pull-left"><img style="width: 40px;border-radius: 50%" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
+                                <div class="comment-show-con-img pull-left"><img style="max-width: 40px;border-radius: 50%" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
                                 <div class="comment-show-con-list pull-left clearfix">
                                     <div class="pl-text clearfix">
                                         <a href="#" class="comment-size-name" th:value="${comment.coid}" th:text="${comment.author} + '：'">  </a>
@@ -82,7 +68,7 @@
 
                                     <div th:if="null ne ${comment.childrenComments}" class="hf-list-con">
                                         <div class="comment-show-con clearfix"  th:each="comment1 : ${comment.childrenComments}">
-                                            <div class="comment-show-con-img pull-left"><img style="border-radius: 50%;width: 40px;" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
+                                            <div class="comment-show-con-img pull-left"><img style="border-radius: 50%;max-width: 40px;" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
                                             <div class="comment-show-con-list pull-left clearfix">
                                                 <div class="pl-text clearfix">
                                                     <a href="#" class="comment-size-name" th:value="${comment1.coid}" th:text="${comment1.author}"></a> @ <span class="my-pl-con" th:text="${comment1.parentAuthorName}"></span>:
