--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/common/left.html
@@ -42,8 +42,8 @@
             <div class="subNav sublist-up"><span class="title-icon glyphicon glyphicon-chevron-up"></span><span class="sublist-title">博客设置</span></div>
             <ul class="navContent" style="display:none">
                 <li>
-                    <div class="showtitle" style="width:100px;"><img src="/admin_/img/leftimg.png" />个人信息修改</div>
-                    <a href="#"><span class="sublist-icon glyphicon glyphicon-user"></span><span class="sub-title">个人信息修改</span></a></li>
+                    <div class="showtitle" style="width:100px;"><img src="/admin_/img/leftimg.png" />网站信息修改</div>
+                    <a href="/admin/index/website"><span class="sublist-icon glyphicon glyphicon-user"></span><span class="sub-title">网站信息修改</span></a></li>
                 <!--<li>
                     <div class="showtitle" style="width:100px;"><img src="img/leftimg.png" />添加新闻</div>
                     <a href="#"><span class="sublist-icon glyphicon glyphicon-user"></span><span class="sub-title">新闻管理</span></a></li>
