--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/post.html
@@ -51,7 +51,7 @@
                         <label>已有<span th:text="${content.data.commentsNum}"></span>条评论</label>
                         <div class="comment-show" style="margin:0;border-bottom: 1px solid #ccc">
                             <div class="comment-show-con clearfix"  th:each="comment : ${comments.data}">
-                                <div class="comment-show-con-img pull-left"><img style="max-width: 40px;border-radius: 50%" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
+                                <div class="comment-show-con-img pull-left"><img style="max-width: 40px;border-radius: 50%" th:src="${comment.avator}" alt=""></div>
                                 <div class="comment-show-con-list pull-left clearfix">
                                     <div class="pl-text clearfix">
                                         <a href="#" class="comment-size-name" th:value="${comment.coid}" th:text="${comment.author} + '：'">  </a>
@@ -68,7 +68,7 @@
 
                                     <div th:if="null ne ${comment.childrenComments}" class="hf-list-con">
                                         <div class="comment-show-con clearfix"  th:each="comment1 : ${comment.childrenComments}">
-                                            <div class="comment-show-con-img pull-left"><img style="border-radius: 50%;max-width: 40px;" src="https://cn.gravatar.com/avatar/a094d86ee6a1d7e4235f092e0f53e801?s=80&r=G&d=" alt=""></div>
+                                            <div class="comment-show-con-img pull-left"><img style="border-radius: 50%;max-width: 40px;" th:src="${comment1.avator}" alt=""></div>
                                             <div class="comment-show-con-list pull-left clearfix">
                                                 <div class="pl-text clearfix">
                                                     <a href="#" class="comment-size-name" th:value="${comment1.coid}" th:text="${comment1.author}"></a> @ <span class="my-pl-con" th:text="${comment1.parentAuthorName}"></span>:
