--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/category.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/category.html
@@ -183,7 +183,7 @@
                 var txt=  "骚年，删除成功！";
                 window.wxc.xcConfirm(txt, window.wxc.xcConfirm.typeEnum.success);
                 setTimeout(function () {
-                    window.location.href = '/admin/index/category';
+                    window.location.href = '/admin/index/classify';
                 }, 1000);
             },
             "error":function (XMLHttpRequest, textStatus, errorThrown) {
