--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/motto.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/motto.html
@@ -202,10 +202,8 @@
 
     function clearCategory() {
         $("#title").val(null);
-        $("#url").val(null);
-        $("#logo").val(null);
-        $("#sort").val(null);
-        $("#mid").val(null);
+        $("#content").val(null);
+        $("#description").val(null);
     }
 
     function updateCategory() {
